data/derived/sp14/progs/unify/prog1242.ml.out
Characters 151-157:
  else (x,hd)@(argmaker x tl)
       ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
